# jkp-data

./: .gitignore  README.md  THESIS_FACTOR_ANALYSIS.md  VMP.R  pyproject.toml
.github/workflows/: ci.yml
slurm/: submit_job_som_hpc.slurm
src/jkp/data/: __init__.py  aux_functions.py  cli.py  config.py  main.py  portfolio.py  thesis_factors.py  wrds_credentials.py
src/jkp/data/resources/: README.md
tests/: conftest.py
tests/fixtures/: generate_rolling_golden.py
tests/golden/: conftest.py  test_run_portfolio_golden.py
tests/golden/fixtures/cmp_on/: clusters.parquet  cmp.parquet  hml.parquet  lms.parquet
tests/golden/fixtures/crsp_only/: clusters.parquet  hml.parquet  lms.parquet  pfs.parquet
tests/golden/fixtures/crsp_only/country_factors/: FRA.parquet  USA.parquet
tests/golden/fixtures/crsp_only/regional_clusters/: world.parquet
tests/golden/fixtures/crsp_only/regional_factors/: world.parquet
tests/golden/fixtures/default_monthly/: clusters.parquet  industry_ff49.parquet  industry_gics.parquet  pfs.parquet
tests/golden/fixtures/default_monthly/regional_clusters/: world.parquet
tests/golden/fixtures/default_monthly/regional_factors/: world.parquet
tests/golden/fixtures/full_daily/: clusters.parquet  clusters_daily.parquet  hml_daily.parquet  industry_ff49_daily.parquet  industry_gics_daily.parquet  lms_daily.parquet  pfs_daily.parquet
tests/golden/fixtures/full_daily/country_factors/: FRA.parquet  USA.parquet
tests/golden/fixtures/full_daily/country_factors_daily/: FRA.parquet  USA.parquet
tests/golden/fixtures/full_daily/regional_clusters_daily/: world.parquet
tests/golden/fixtures/full_daily/regional_factors_daily/: world.parquet
tests/golden/fixtures/nyse_breakpoints/: clusters.parquet  hml.parquet  lms.parquet  pfs.parquet
tests/golden/fixtures/nyse_breakpoints/country_factors/: FRA.parquet  USA.parquet
tests/golden/fixtures/nyse_breakpoints/regional_clusters/: world.parquet
tests/golden/fixtures/nyse_breakpoints/regional_factors/: world.parquet
tests/golden/fixtures/signals_on/: clusters.parquet  hml.parquet  lms.parquet  pfs.parquet
tests/golden/fixtures/signals_on/country_factors/: USA.parquet
tests/integration/: test_portfolios_matrix.py  test_run_portfolio_outputs.py
tests/property/: test_portfolio_invariants.py
tests/unit/: test_aug_msf_v2.py  test_aux_functions.py  test_cli.py  test_combine_crsp_comp_sf.py  test_comp_hgics.py  test_deterministic_dedup.py  test_download_and_config.py  test_ff_ind_class.py  test_portfolio.py  test_public_api.py  test_ret_exc_wins.py  test_rolling_daily_metrics.py  test_run_portfolio_parity.py  test_thesis_factors.py  test_wrds_credentials.py  test_wrds_download.py
tests/unit/portfolio/: conftest.py  test_add_ecdf.py  test_breakpoints_and_sources.py  test_build_hml_lms.py  test_build_regional_loop.py  test_cluster_portfolios.py  test_cmp_branch.py  test_date_arithmetic.py  test_industry_returns.py  test_output_format.py  test_portfolios_core.py  test_regional_data.py  test_signals_branch.py  test_stack_outputs.py  test_winsorization.py  test_writers.py
