[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jkp-data"
version = "0.1.0"
description = "Global factor data generation pipeline from Jensen, Kelly, and Pedersen (2023)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Bryan Kelly"},
    {name = "Theis Jensen"},
    {name = "Lasse Pedersen"},
    {name = "Rob Capellini"},
    {name = "Fernando Reyes De La Luz"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["finance", "factor-models", "asset-pricing", "WRDS"]
dependencies = [
    "duckdb>=1.4.3",
    "fastexcel>=0.16.0",
    "ibis-framework[duckdb,postgres]>=12.0",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "numpy>=1.26.4",
    "polars>=1.40",
    "polars-ols>=0.3.5",
    "pyarrow>=16.1.0",
    "pycryptodomex>=3.23.0",
    "sqlalchemy>=1.4.49",
    "tqdm>=4.66.5",
    "typer>=0.15.0",
]

[project.urls]
Homepage = "https://jkpfactors.com"
Repository = "https://github.com/bkelly-lab/jkp-data"
Issues = "https://github.com/bkelly-lab/jkp-data/issues"
Documentation = "https://jkpfactors.s3.amazonaws.com/documents/Documentation.pdf"

[project.scripts]
jkp = "jkp.data.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"jkp.data" = ["resources/*"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]
lint = [
    "ruff>=0.4.0",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--cov=jkp.data",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (module interactions)",
    "methodology: Paper methodology validation tests",
    "regression: Golden output regression tests",
    "expensive: Expensive tests requiring significant resources",
    "wrds: Tests requiring WRDS credentials",
]

[tool.coverage.run]
source = ["jkp.data"]
branch = true
omit = [
    "*/wrds_credentials.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM102", # nested if statements (sometimes clearer than combined)
    "SIM108", # use ternary operator instead of if-else
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
